feat: add compile from source string